[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cognee"
version = "0.1.0"
description = "A memory layer for AI applications that enables dynamic knowledge graph construction and retrieval"
authors = ["cognee contributors"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/topoteretes/cognee"
repository = "https://github.com/topoteretes/cognee"
keywords = ["ai", "memory", "knowledge-graph", "llm", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{include = "cognee"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
openai = ">=1.0.0"
sqlalchemy = ">=2.0.0"
alembic = ">=1.12.0"
aiofiles = ">=23.0.0"
httpx = ">=0.25.0"
typing-extensions = ">=4.8.0"
python-dotenv = ">=1.0.0"
networkx = ">=3.0"
numpy = ">=1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=4.1.0"
black = ">=23.0.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"
mypy = ">=1.5.0"
pre-commit = ">=3.4.0"

[tool.poetry.group.vector.dependencies]
weaviate-client = {version = ">=4.0.0", optional = true}
chromadb = {version = ">=0.4.0", optional = true}
qdrant-client = {version = ">=1.6.0", optional = true}

[tool.poetry.extras]
weaviate = ["weaviate-client"]
chroma = ["chromadb"]
qdrant = ["qdrant-client"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
cov_report = "term-missing"

[tool.coverage.run]
source = ["cognee"]
omit = ["tests/*", "**/__init__.py"]
